# HayateViewer-Rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build_error.txt  build_log.txt  cargo_err.txt  config.json  issuie.md  metadata.json  output.txt  参考.md
.github/workflows/: release.yml
src/: API_LIST.md  config.rs  main.rs  state.rs
src/image/: archive.rs  cache.rs  decoder.rs  loader.rs  mod.rs
src/render/: d2d.rs  d3d11.rs  mod.rs  opengl.rs
src/render/shaders/: page_curl.hlsl  page_curl.vert  texture_quad.hlsl  ycbcr_to_rgb.hlsl
src/ui/: dialogs.rs  help.rs  history.rs  mod.rs  modern_settings.rs
