[package]
name = "hayate-viewer-rust"
version = "0.4.8-test"
edition = "2024"

[dependencies]
crc = "3.0.0"
image = "0.25.9"
raw-window-handle = "0.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_DirectComposition", "Win32_System_Com", "Win32_UI_Shell", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dwm", "Win32_Graphics_DirectWrite", "Win32_Graphics_Direct3D_Fxc"] }
winit = { version = "0.29", features = ["serde"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5.0"
natord = "1.0.9"
sevenz-rust = "0.6.1"
jpeg2k = "0.10.1"
lru = "0.16.2"
unrar = "0.5.4"
glow = "0.13"
glutin = "0.31"
glutin-winit = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
# raw-window-handle = "0.5" # This is already present as "0.6", keeping the higher version.

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
